# gathers

./: .gitignore  Cargo.toml  README.md  build.envd
.github/: FUNDING.yml
.github/workflows/: check.yml  codspeed.yml  release.yml  rust.yml
benches/: bench.rs  kmeans.py
python/: Cargo.toml  README.md  pyproject.toml
python/gathers/: __init__.py
python/src/: lib.rs
python/tests/: test_kmeans.py
scripts/: gen_fvecs.py
src/: distance.rs  kmeans.rs  lib.rs  main.rs  rabitq.rs  sampling.rs  simd.rs  utils.rs
src/simd/: pulp.rs
