[package]
name = "gathers"
version = "0.1.0"
edition = "2021"
authors = ["Keming <kemingy94@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kemingy/gathers"
description = "Clustering algorithms."
documentation = "https://docs.rs/gathers"
keywords = ["clustering"]
categories = ["algorithms", "science"]

[dependencies]
env_logger = "0.11.5"
log = "0.4.22"
num-traits = "0.2.19"
rand = "0.8.5"
