[package]
name = "gathers"
version = "0.3.1"
edition = "2024"
authors = ["Keming <kemingy94@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/kemingy/gathers"
description = "Clustering algorithms."
documentation = "https://docs.rs/gathers"
keywords = ["cluster", "kmeans", "rabitq", "machine-learning", "vector-search"]
categories = ["algorithms", "science"]
rust-version = "1.85"

[dependencies]
aligned-vec = "0.6.4"
argh = "0.1.13"
bytemuck = "1.22.0"
log = "0.4.27"
logforth = "0.24.0"
num-traits = "0.2.19"
pulp = "0.21.5"
rand = "0.9.0"
rand_distr = "0.5.0"
rayon = "1.10.0"

[dependencies.faer]
git = "https://github.com/sarah-quinones/faer-rs.git"
rev = "fd0c2def53078dbf8a41a83d00909e0061ed30b8"
default-features = false
features = ["linalg"]

[profile.dev.package.faer]
opt-level = 3

[profile.perf]
inherits = "release"
debug = true

[profile.bench]
debug = true

[features]
default = []
# use single thread to make the perf clear
perf = []

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false
