[package]
name = "gatherspy"
version = "0.3.1"
edition = "2024"
rust-version = "1.85"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "gatherspy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.24.1", features = ["abi3-py39", "extension-module"] }
# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#multiple-locations
gathers = { path = "../", version = "0.3.1"}
numpy = "0.24.0"
